swagger implementation finally
