# app/api/__init__.py
@@ -4,14 +4,12 @@
 
 from flask import abort
 from functools import wraps
-
-filename_list = ['emendas', 'emendas_convenios', 'convenios',
-                'proponentes', 'movimento', 'municípios brasileiros']
+from app.config import TABLE_LIST
 
 def check_target(f):
 	@wraps(f)
 	def decorated_function(*args, **kwargs):
-		if kwargs.get('name') not in filename_list:
+		if kwargs.get('tableName') not in TABLE_LIST:
 			abort(404)
 		return f(*args, **kwargs)
 	return decorated_function
