# app/static/swagger.json
@@ -1,125 +1,117 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "description": "Iran",
-      "version": "1.0.0",
-      "title": "Siconv Dados",
-      "license": {
-        "name": "MIT",
-        "url": "https://opensource.org/licenses/MIT"
+  "swagger": "2.0",
+  "info": {
+    "description": "API para disponibilização de alguns dados coletados do Siconv e reaorganizados em um novo modelo de dados mais simples.",
+    "version": "1.0.0",
+    "title": "Dados do Siconv",
+    "license": {
+      "name": "MIT",
+      "url": "https://opensource.org/licenses/MIT"
+    }
+  },
+  "security": [
+    {
+      "api_key": []
+    }
+  ],
+  "paths": {
+    "/data_atual": {
+      "get": {
+        "tags": [
+          "Data atual"
+        ],
+        "summary": "Retorna a data da última atualização.",
+        "produces": [
+          "plain/text"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Uma informação de autorização válida deve ser informada."
+          },
+          "5XX": {
+            "description": "Ocorreu um erro interno não especificado."
+          }
+        }
       }
     },
-
-      "tags": [
-        {
-          "name": "Dados do Siconv",
-          "description": "API para disponibilização de alguns dados coletados do Siconv e reaorganizados em um novo modelo de dados mais simples"
+    "/municipios": {
+      "get": {
+        "tags": [
+          "Municípios"
+        ],
+        "summary": "Retorna um arquivo json com os dados dos municípios.",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Uma informação de autorização válida deve ser informada."
+          },
+          "5XX": {
+            "description": "Ocorreu um erro interno não especificado."
+          }
         }
-      ],
-      "security": {
-          "ApiKeyAuth": []
-      },
-      "paths": {
-        "/data_atual": {
-          "get": {
-            "tags": [
-              "Data atual"
-            ],
-            "summary": "Retorna da data da última atualização",
-            "responses": {
-              "200": {
-                "description": "OK"
-              }
+      }
+    },
+    "/data/{tableName}": {
+      "get": {
+        "tags": [
+          "Tabelas"
+        ],
+        "summary": "Retorna um arquivo csv compactado com gzip contendo os dados da tabela selecionada.",
+        "produces": [
+          "application/gzip"
+        ],
+        "parameters": [
+          {
+            "name": "tableName",
+            "in": "path",
+            "description": "Nome da tabela",
+            "required": true,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "enum": [
+                       "emendas",
+                       "emendas_convenios",
+                       "convenios",
+                       "proponentes",
+                       "movimento"
+                      ]
             }
           }
-        },
-        "/municipios": {
-            "get": {
-              "tags": [
-                "Municípios"
-              ],
-              "summary": "Retorna um arquivo json com os dados dos municípios",
-              "responses": {
-                "200": {
-                  "description": "OK"
-                }
-              }
-            }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
-        "/data/convenios": {
-            "get": {
-              "tags": [
-                "Convênios"
-              ],
-              "summary": "Retorna um arquivo csv compactado com gzip contendo os dados dos convênios",
-              "responses": {
-                "200": {
-                  "description": "OK"
-                }
-              }
-            }
+          "400": {
+            "description": "A requisão foi mal formulada."
           },
-        "/data/emendas": {
-            "get": {
-              "tags": [
-                "Emendas"
-              ],
-              "summary": "Retorna um arquivo csv compactado com gzip contendo os dados dos emendas",
-              "responses": {
-                "200": {
-                  "description": "OK"
-                }
-              }
-            }
+          "401": {
+            "description": "Uma informação de autorização válida deve ser informada."
           },
-        "/data/emendas_convenios": {
-            "get": {
-              "tags": [
-                "Emendas x Convênios"
-              ],
-              "summary": "Retorna um arquivo csv compactado com gzip contendo os relacionamentos entre convênios e emendas",
-              "responses": {
-                "200": {
-                  "description": "OK"
-                }
-              }
-            }
+          "404": {
+            "description": "A tabela requisitada não está disponível."
           },
-        "/data/proponentes": {
-            "get": {
-              "tags": [
-                "Proponentes"
-              ],
-              "summary": "Retorna um arquivo csv compactado com gzip contendo os dados dos proponentes",
-              "responses": {
-                "200": {
-                  "description": "OK"
-                }
-              }
-            }
-          },
-        "/data/movimento": {
-            "get": {
-              "tags": [
-                "Movimento"
-              ],
-              "summary": "Retorna um arquivo csv compactado com gzip contendo os dados de movimentações financeiras: Desembolsos (liberações do concedente), Ingressos de Contrapartidas (pelo convenente) e pagamentos a fornecedores",
-              "responses": {
-                "200": {
-                  "description": "OK"
-                }
-              }
-            }
+          "5XX": {
+            "description": "Ocorreu um erro interno não especificado."
           }
-      },
-
-"components": {
-    "securitySchemes": {
-        "ApiKeyAuth": {
-            "type": "apiKey",
-            "name": "X-API-KEY",
-            "in": "header"
         }
+      }
     }
- }
+  },
+  "securityDefinitions": {
+    "api_key": {
+      "type": "apiKey",
+      "name": "X-API-KEY",
+      "in": "header"
+    }
+  }
 }
